# owllang-compiler

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  search-index.js  settings.html  source-files.js  test.bc  test.hoot
.github/workflows/: coverage.yml  rust.yml
owlc-cli/: Cargo.toml
owlc-cli/src/: main.rs
owlc-driver/: Cargo.toml
owlc-driver/src/: lib.rs
owlc-error/: Cargo.toml
owlc-error/src/: lib.rs
owlc-lexer/: Cargo.toml
owlc-lexer/benches/: benches.rs
owlc-lexer/src/: lexer.rs  lib.rs  token.rs
owlc-lexer/tests/: tests.rs
owlc-llvm/: Cargo.toml
owlc-llvm/src/: lib.rs
owlc-parser/: Cargo.toml
owlc-parser/benches/: parser_benches.rs
owlc-parser/src/: ast.rs  lib.rs  parser.rs  visitor.rs
owlc-parser/src/ast/: expressions.rs  statements.rs
owlc-parser/src/snapshots/: owlc_parser__parser__tests__parse_basic_bin_op-2.snap  owlc_parser__parser__tests__parse_basic_bin_op.snap  owlc_parser__parser__tests__parse_fn_definition-2.snap  owlc_parser__parser__tests__parse_fn_definition-3.snap  owlc_parser__parser__tests__parse_fn_definition-4.snap  owlc_parser__parser__tests__parse_fn_definition-5.snap  owlc_parser__parser__tests__parse_fn_definition-6.snap  owlc_parser__parser__tests__parse_fn_definition.snap  owlc_parser__parser__tests__parse_func_definition-2.snap  owlc_parser__parser__tests__parse_func_definition-3.snap  owlc_parser__parser__tests__parse_func_definition-4.snap  owlc_parser__parser__tests__parse_func_definition-5.snap  owlc_parser__parser__tests__parse_func_definition-6.snap  owlc_parser__parser__tests__parse_func_definition.snap  owlc_parser__parser__tests__parse_function_call-2.snap  owlc_parser__parser__tests__parse_function_call-3.snap  owlc_parser__parser__tests__parse_function_call-4.snap  owlc_parser__parser__tests__parse_function_call-5.snap  owlc_parser__parser__tests__parse_function_call.snap  owlc_parser__parser__tests__parse_if_else_statement-2.snap  owlc_parser__parser__tests__parse_if_else_statement.snap  owlc_parser__parser__tests__parse_let_statement-2.snap  owlc_parser__parser__tests__parse_let_statement-3.snap  owlc_parser__parser__tests__parse_let_statement.snap  owlc_parser__parser__tests__parse_operator_precedence-10.snap  owlc_parser__parser__tests__parse_operator_precedence-11.snap  owlc_parser__parser__tests__parse_operator_precedence-2.snap  owlc_parser__parser__tests__parse_operator_precedence-3.snap  owlc_parser__parser__tests__parse_operator_precedence-4.snap  owlc_parser__parser__tests__parse_operator_precedence-5.snap  owlc_parser__parser__tests__parse_operator_precedence-6.snap  owlc_parser__parser__tests__parse_operator_precedence-7.snap  owlc_parser__parser__tests__parse_operator_precedence-8.snap  owlc_parser__parser__tests__parse_operator_precedence-9.snap  owlc_parser__parser__tests__parse_operator_precedence.snap  owlc_parser__parser__tests__parse_repl_input-2.snap  owlc_parser__parser__tests__parse_repl_input-3.snap  owlc_parser__parser__tests__parse_repl_input-4.snap  owlc_parser__parser__tests__parse_repl_input-5.snap  owlc_parser__parser__tests__parse_repl_input.snap  (+8 more)
owlc-parser/tests/: parser_tests.rs
owlc-passes/: Cargo.toml  std.hoot
owlc-passes/benches/: resolver_benches.rs
owlc-passes/src/: fn_main.rs  lib.rs  resolver.rs
owlc-passes/tests/: resolver_tests.rs
owlc-source/: Cargo.toml
owlc-source/src/: lib.rs
owlc-span/: Cargo.toml
owlc-span/src/: lib.rs
owlc-span/tests/: source_file.rs  source_file_test.rs
owlc_cli/: all.html  fn.main.html  index.html
owlc_driver/: all.html  fn.driver.html  fn.println.html  fn.read_num.html  index.html  sidebar-items.js
owlc_error/: all.html  index.html  sidebar-items.js  struct.Error.html  struct.ErrorReporter.html
owlc_lexer/: all.html  enum.TokenKind.html  index.html  sidebar-items.js  struct.Lexer.html  struct.Token.html
owlc_lexer/lexer/: struct.Lexer.html
owlc_lexer/token/: enum.TokenKind.html  struct.Token.html
owlc_llvm/: all.html  index.html  macro.c_str.html  sidebar-items.js  struct.LlvmCodeGenVisitor.html
owlc_parser/: all.html  index.html  sidebar-items.js
owlc_parser/ast/: index.html  sidebar-items.js
owlc_parser/parser/: index.html  struct.Parser.html
owlc_parser/visitor/: index.html  trait.AstVisitor.html
owlc_passes/: all.html  index.html  sidebar-items.js
owlc_passes/fn_main/: index.html  sidebar-items.js  struct.MainFunctionVisitor.html
owlc_passes/resolver/: enum.Scope.html  enum.Symbol.html  index.html  sidebar-items.js  (+2 more)
owlc_source/: all.html  index.html  struct.SourceFile.html
owlc_span/: all.html  index.html  sidebar-items.js  struct.BytePos.html  struct.SourceFile.html  struct.Span.html  type.FileName.html
owllang-cli/: Cargo.toml
owllang-cli/src/: main.rs
owllang-lexer/: Cargo.toml
owllang-lexer/benches/: benches.rs
owllang-lexer/src/: lexer.rs  lib.rs  token.rs
owllang-lexer/tests/: tests.rs
owllang-llvm-codegen/: Cargo.toml
owllang-llvm-codegen/src/: lib.rs  macros.rs
owllang-parser/: Cargo.toml
owllang-runtime/: Makefile  runtime.cpp
(+73 files in other folders)
