[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owlc-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.0"
clap = "2"
llvm-sys = "100"
owlc-error = {path = "../owlc-error"}
owlc-passes = {path = "../owlc-passes"}
owlc-span = {path = "../owlc-span"}
owlc-lexer = {path = "../owlc-lexer"}
owlc-llvm = {path = "../owlc-llvm"}
owlc-parser = {path = "../owlc-parser"}
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
