[package]
name = "owlc-driver"
version = "0.1.0"
authors = ["Luke Chu <lukewchu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.0"
clap = "2"
llvm-sys = "100"
owlc-error = {path = "../owlc-error"}
owlc-lexer = {path = "../owlc-lexer"}
owlc-llvm = {path = "../owlc-llvm"}
owlc-parser = {path = "../owlc-parser"}
owlc-passes = {path = "../owlc-passes"}
owlc-source = {path = "../owlc-source"}
owlc-span = {path = "../owlc-span"}
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
