[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owlc-llvm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "110"
owlc-error = {path = "../owlc-error"}
owlc-lexer = {path = "../owlc-lexer"}
owlc-parser = {path = "../owlc-parser"}
