[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owlc-parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
owlc-error = {path = "../owlc-error"}
owlc-lexer = {path = "../owlc-lexer"}
owlc-span = {path = "../owlc-span"}
serde = {version = "1.0", features = ["derive"]}

[[bench]]
harness = false
name = "parser_benches"

[dev-dependencies]
insta = "1.1.0"
