[package]
authors = ["Luke Chu <lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owlc-passes"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owlc-error = {path = "../owlc-error"}
owllang-lexer = {path = "../owllang-lexer"}
owllang-parser = {path = "../owllang-parser"}
