[package]
name = "owlc-source"
version = "0.1.0"
authors = ["Luke Chu <lukewchu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owlc-error = { path = "../owlc-error" }
owlc-lexer = { path = "../owlc-lexer" }
owlc-parser = { path = "../owlc-parser" }
owlc-passes = { path = "../owlc-passes" }
owlc-span = { path = "../owlc-span" }