[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owllang-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
llvm-sys = "100"
owlc-error = {path = "../owlc-error"}
owlc-passes = {path = "../owlc-passes"}
owlc-span = {path = "../owlc-span"}
owllang-lexer = {path = "../owllang-lexer"}
owllang-llvm-codegen = {path = "../owllang-llvm-codegen"}
owllang-parser = {path = "../owllang-parser"}
