[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "owllang-llvm-codegen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "100"
owlc-error = {path = "../owlc-error"}
owllang-lexer = {path = "../owllang-lexer"}
owllang-parser = {path = "../owllang-parser"}
